[project]
name = "claude-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "wikipedia>=1.4.0",
]

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]
good-names = ["i", "j", "k", "ex", "Run", "_"]
